# FFmpeg-Android

./: README.md
FFmpegAS/app/: CMakeLists.txt  build.gradle
FFmpegAS/app/src/androidTest/java/com/ywl5320/ffmpegas/: ExampleInstrumentedTest.java
FFmpegAS/app/src/main/: AndroidManifest.xml
FFmpegAS/app/src/main/java/com/ywl5320/ffmpegas/: FFmpegPlayer.java  MainActivity.java
FFmpegAS/app/src/main/jni/: player.c
FFmpegAS/app/src/main/res/layout/: activity_main.xml
FFmpegAS/app/src/main/res/values/: strings.xml
FFmpegAS/app/src/test/java/com/ywl5320/ffmpegas/: ExampleUnitTest.java
FFmpegAS/gradle/wrapper/: gradle-wrapper.properties
FFmpegPro/: .cproject  .project  AndroidManifest.xml
FFmpegPro/jni/: Android.mk  FFmpegPro.c  com_ywl5320_ffmpegpro_FFmplayer.h
FFmpegPro/res/values/: strings.xml
FFmpegPro/src/com/ywl5320/ffmpegpro/: FFmplayer.java  MainActivity.java
WliveFM/: README.md  settings.gradle
WliveFM/app/: build.gradle
WliveFM/app/src/androidTest/java/com/ywl5320/wlivefm/: ExampleInstrumentedTest.java
WliveFM/app/src/main/: AndroidManifest.xml
WliveFM/app/src/main/java/com/ywl5320/wlivefm/: FMApplication.java  MainActivity.java  SplashActivity.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/adapter/: MyAdapter.java  TypeAdapter.java  ViewPagerAdapter.java  WapHeaderAndFooterAdapter.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/appconfig/: Config.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/base/: BaseActivity.java  BaseFragment.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/brocast/: NotificationBroadCast.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/http/beans/: BaseBean.java  HomePageBean.java  LiveChannelBean.java  LiveChannelPlaceBean.java  LiveChannelTypeBean.java  LiveListBean.java  LivePageBean.java  PlaceBean.java  ScrollImgBean.java  StreamsBean.java  TokenBean.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/http/converter/: UnGsonConverterFactory.java  UnGsonRequestBodyConverter.java  UnGsonResponseBodyConverter.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/http/httpentity/: HttpResult.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/http/service/: BaseApi.java  ExceptionApi.java  HttpMethod.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/http/serviceapi/: RadioApi.java  RadioService.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/http/subscribers/: HttpSubscriber.java  ResponStatusCode.java  SubscriberOnListener.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/log/: BaseLog.java  FileLog.java  JsonLog.java  MyLog.java  SWToast.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/menu/: ItemListMenu.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/mvp/: LiveActivity.java  LiveListActivity.java  LocalActivity.java  PlaceFragment.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/server/: FMServer.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/util/: BeanUtil.java  CommonUtil.java  MyAppGlideModule.java  NetUtil.java  NotificationBarUtil.java  SharedpreferencesUtil.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/util/widget/adviewpager/adapter/: ImageViewPagerAdapter.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/util/widget/adviewpager/adutils/: AdViewpagerUtil.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/widget/: GlideRoundTransform.java  RoundRectImageView.java  SquareImageView.java
WliveFM/app/src/main/java/com/ywl5320/wlivefm/widget/bar/: NavitationFollowScrollLayout.java  NavitationLayout.java  NavitationScrollLayout.java  TabNavitationLayout.java
WliveFM/app/src/main/res/anim/: pop_enter_anim.xml
WliveFM/app/src/main/res/drawable/: btn_selector_blue.xml  btn_selector_gray.xml  btn_selector_green.xml  btn_selector_red.xml  circle_drawable.xml  circle_drawable_pressed.xml  miniplay_load_drawable.xml  miniplay_menu_selector.xml  miniplay_pause_selector.xml  miniplay_play_selector.xml  nofication_black_next_selector.xml  nofication_black_pause_selector.xml  nofication_black_play_selector.xml  nofication_black_pre_selector.xml  nofication_white_next_selector.xml  nofication_white_pause_selector.xml  nofication_white_play_selector.xml  nofication_white_pre_selector.xml
WliveFM/app/src/main/res/layout/: activity_live_list_layout.xml  activity_local_layout.xml  activity_main_layout.xml  activity_play_layout.xml  activity_splash_layout.xml  footer_layout.xml  fragment_place_layout.xml  header_home_layout.xml  include_buttom_player_layout.xml  include_common_text_title.xml  item_live_channel_layout.xml  item_text.xml  item_type_layout.xml  notify_dark_layout.xml  notify_light_layout.xml  popupmenu_itemlist_layout.xml
WliveFM/app/src/main/res/values/: colors.xml  styles.xml
WliveFM/app/src/test/java/com/ywl5320/wlivefm/: ExampleUnitTest.java
WliveFM/wlplayer/: CMakeLists.txt  build.gradle
WliveFM/wlplayer/src/androidTest/java/com/ywl5320/wlsdk/: ExampleInstrumentedTest.java
WliveFM/wlplayer/src/main/: AndroidManifest.xml
WliveFM/wlplayer/src/main/java/com/ywl5320/wlsdk/player/: SDLSurface.java  WlPlayer.java
WliveFM/wlplayer/src/main/jni/: player.c
WliveFM/wlplayer/src/main/jni/sdl/src/core/android/: SDL_android.c
WliveFM/wlplayer/src/main/jni/sdl/src/main/android/: SDL_android_main.c
WliveFM/wlplayer/src/test/java/com/ywl5320/wlsdk/: ExampleUnitTest.java
build_script/: build_android.sh  configure
